@@ -1,10 +1,10 @@
-35c48b144db37842884e5ccf6f9d1d47 *DESCRIPTION
+602cb79a77ca66aadfdaf6eb0cc14d04 *DESCRIPTION
 35106862a5c787dc3d8d856fa1eb462c *NAMESPACE
-5a62b53901135a2f77cfb1a80be85341 *NEWS
+3e579412ddb4f7cbbda086160b70275b *NEWS
 de35e421ece348ce2f4b7ba457b25bcd *R/POSIXt.R
 a03cea71930b142e3aa4b92d0780bb5e *R/dateAlign.R
 ff70602e15a590f5275f26ca7ac515b8 *R/dateDow.R
-61685085b447883252b025481c378094 *R/dateFormat.R
+0c0b011267b81ce500d3b81296e2ca3a *R/dateFormat.R
 18d7a4789b54280336721f7e1b914141 *R/dateMatch.R
 e141651208a919b2eafd738137fbadce *R/dateParse.R
 78057256ffd1492b8ec54eb739cb8429 *R/dateSeq.R
